--- a/Assignments/10-1/index.html
+++ b/Assignments/10-1/index.html
@@ -32,7 +32,7 @@
         </div>
      </div>
      <div class="footer">
-        <a href="https://codepen.io/22501A05D9-PATHIVADA-HARSHAVARDHAN/pen/XWQgaag">Next Page...</a>
+        <a href="https://harshabambu.github.io/FULL_STACK/Assignments/10-2/">Next Page...</a>
      </div>
 </body>
 </html>
