--- a/Assignments/10-2/index.html
+++ b/Assignments/10-2/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="footer">
-        <a href="https://codepen.io/22501A05D9-PATHIVADA-HARSHAVARDHAN/pen/WNWOEEb">Previous Page...</a>
+        <a href="https://harshabambu.github.io/FULL_STACK/Assignments/10-1/">Previous Page...</a>
      </div>
 </body>
 </html>
